// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavBar snapshots renders correctly without text 1`] = `
<div
  className="Nav-bar"
  id="test"
>
  <Link
    className="link"
    key="nav-bar-link-test-0"
    replace={false}
    to="/test"
  />
</div>
`;

exports[`NavBar snapshots renders without crashing 1`] = `
<div
  className="Nav-bar"
  id="test"
>
  <Link
    className="link"
    key="nav-bar-link-test-0"
    replace={false}
    to="/test"
  >
    <span>
      test
    </span>
  </Link>
</div>
`;
